refactor the isAnythingReturned function of LibraryTest to handle both Book and Student purposes